# momentum

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  main.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  breakout.py  price_momentum.py  scoring.py  stability.py  technical.py  volume_momentum.py
app/models/: __init__.py  stock.py
app/services/: __init__.py  analytics.py  confidence.py  csv_parser.py  market_overview.py  stock_ranker.py
app/templates/: base.html  index.html
app/templates/components/: breakout_candidates.html  empty_state.html  filters.html  market_overview.html  stat_card.html  top_movers.html  trending_industries.html  upload_form.html
app/templates/partials/: footer.html  header.html  insights_sidebar.html  main_content.html  results.html  stock_table.html
tests/: __init__.py  test_scoring.py
